Uploaded image for project: 'Traffic Server'
  1. Traffic Server
  2. TS-2315

ESI Plugin: fetcher does not handle error gracefully

    XMLWordPrintableJSON

Details

    • Bug
    • Status: Closed
    • Major
    • Resolution: Fixed
    • None
    • 4.1.2
    • Plugins
    • None

    Description

      Case 1

      • When gunzip on the include response is failing, the fetcher does nothing. We should actually set the response body to be of zero length

      Case 2

      • We don't invoke the callobject when a non-200 response is returned for the includes.
        I will provide a patch shortly

      Attachments

        1. 2315_patch.diff
          2 kB
          Shu Kit Francis Chan

        Activity

          People

            kichan Shu Kit Francis Chan
            kichan Shu Kit Francis Chan
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved: