TS-2315 ESI Plugin: fetcher does not handle error gracefully.