plugins/experimental/esi/fetcher/HttpDataFetcherImpl.cc
@@ -25,7 +25,6 @@
 #include "lib/Utils.h"
 #include "lib/gzip.h"
 
-#include <stdlib.h>
 #include <arpa/inet.h>
 
 using std::string;
@@ -181,11 +180,11 @@ HttpDataFetcherImpl::handleFetchEvent(TSEvent event, void *edata)
           for (BufferList::iterator iter = buf_list.begin(); iter != buf_list.end(); ++iter) {
             req_data.raw_response.append(iter->data(),iter->size());
           }
-          req_data.body_len = req_data.raw_response.size();
-          req_data.body = req_data.raw_response.data();
         } else {
           TSError("[%s] Error while gunzipping data", __FUNCTION__);
         }
+        req_data.body_len = req_data.raw_response.size();
+        req_data.body = req_data.raw_response.data();
       }
 
       for (CallbackObjectList::iterator list_iter = req_data.callback_objects.begin();
@@ -196,6 +195,12 @@ HttpDataFetcherImpl::handleFetchEvent(TSEvent event, void *edata)
     } else {
       TSDebug(_debug_tag, "[%s] Received non-OK status %d for request [%s]",
                __FUNCTION__, req_data.resp_status, req_str.data());
+
+      string empty_response = "";
+      for (CallbackObjectList::iterator list_iter = req_data.callback_objects.begin();
+           list_iter != req_data.callback_objects.end(); ++list_iter) {
+         (*list_iter)->processData(req_str.data(), req_str.size(), empty_response.data(), empty_response.size());
+      }
     }
   } else {
     TSDebug(_debug_tag, "[%s] Could not parse response for request [%s]",
